# vfs-kit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
examples/: hello_world.rs  main.rs
src/: core.rs  lib.rs
src/fs/: dir.rs  mod.rs
src/vfs/: dir_entry.rs  dir_fs.rs  entry.rs  map_fs.rs  mod.rs
